# Craftium

./: .gitignore  BUILD_MONITOR.md  CMakeLists.txt  Craftium.pro  Design_Document.md  GITHUB_SETUP.md  README.md  RELEASES.md  Test file.json  buttonPressRecorder.py  buttonPressRecorder.spec  compile_commands.json  cpp_Design_Document.md  test sequence.json
.github/workflows/: build.yml  continuous-build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
include/: controllerapp.h  macos_window_helper.h  playbackworker.h
src/: controllerapp.cpp  macos_window_helper.mm  main.cpp  playbackworker.cpp
